@@ -1,2 +1,2 @@
 noinst_HEADERS = httpreq.h jsonvalue.h httpserver.h directory.h expandstrings.h jsondb.h libjavascript.h \
-	images.h targetreq.h plot.h imgpreview.h bsc.h nightreq.h nightdur.h obsreq.h
+	images.h targetreq.h addtargetreq.h plot.h imgpreview.h bsc.h nightreq.h nightdur.h obsreq.h
