@@ -72,26 +72,6 @@ class Targets: public rts2json::GetRequestAuthorized
 #endif /* RTS2_HAVE_LIBJPEG */
 };
 
-/**
- * Add target to the database. Consists of those steps:
- *
-
- * @author Petr Kubanek <petr@kubanek.net>
- */
-class AddTarget: public rts2json::GetRequestAuthorized
-{
-	public:
-		AddTarget (const char *prefix, rts2json::HTTPServer *_http_server, XmlRpc::XmlRpcServer *s):rts2json::GetRequestAuthorized (prefix, _http_server, "add new target", s) {};
-
-		virtual void authorizedExecute (XmlRpc::XmlRpcSource *source, std::string path, XmlRpc::HttpParams *params, const char* &response_type, char* &response, size_t &response_length);
-
-	private:
-		void askForTarget (const char* &response_type, char* &response, size_t &response_length);
-		void confimTarget (const char *tar, const char* &response_type, char* &response, size_t &response_length);
-		void newTarget (const char *oriname, const char *name, int tarid, double ra, double dec, const char* &response_type, char* &response, size_t &response_length);
-		void schedule (int tarid, const char* &response_type, char* &response, size_t &response_length);
-};
-
 #endif /* RTS2_HAVE_PGSQL */
 
 }
