@@ -28,6 +28,7 @@
 #ifdef RTS2_HAVE_PGSQL
 #include "rts2db/devicedb.h"
 #include "rts2db/plan.h"
+#include "rts2json/addtargetreq.h"
 #include "bbapi.h"
 #else
 #include "configuration.h"
