@@ -1,3 +1,6 @@
+2013-03-26
+ * moved target and observation request to JSON library
+
 2013-03-21
  * migrated JSON DB API to jsondb
 
